--- a/twos-complement/index.html
+++ b/twos-complement/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
 	<div class="explanation hidden"><span class="explanation-spoiler block text-centered">close</span>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis ducimus cupiditate autem libero, quos reprehenderit vitae quasi quia magni sed nisi necessitatibus quam rerum qui placeat sint porro sit eligendi nostrum! Voluptate quos eveniet omnis numquam culpa, nam eligendi tempora voluptas fuga laborum praesentium reiciendis minus illum iure animi earum explicabo possimus doloribus dignissimos officia necessitatibus impedit aut deleniti. Obcaecati, ea, veniam minus sapiente nemo atque neque sit modi quam provident corrupti qui laudantium distinctio possimus at inventore voluptas. Nesciunt, quod facilis. Aperiam, et quas. Quo dolor repellendus porro cum quisquam. Pariatur odio suscipit veniam aspernatur, dicta rerum quas placeat!
+		Most people know there is microcircuits inside a computer, but not a brain. It is the difficult engineering problem to consider carefully a lot of trade-offs and assemble microcircuit which will have solved our problems. The less irons engineers use, the simpler for them and cheaper for us. Does it really to reduce material costs when designing computer?
+Two's complement format allows us to replace substraction to addition, however a result we get the same if it were substracton.
+Circle below will help to understand it!
+Note that most significant bit 1 tells us about a negative number, while 0 tells about positive.
+Pay attention that -1 + 1 = 0.
+If you will try to calculate something on the paper there will be cases you get one more leftmost bit. It's called overlow.
+In the case of 2's complement computer will have cropped this bit in order to provide a correct result.
 	</div>
 	<h1>Two's complement explanation</h1>
 	<div class="intro">
