Update theory link

--- a/twos-complement/index.html
+++ b/twos-complement/index.html
@@ -17,8 +17,7 @@
 	</div>
 	<h1>Two's complement explanation</h1>
 	<div class="intro">
-		<p>Let we have 8 bits ...</p>
-		<p>Limitations: -128 — 127 <span class="explanation-spoiler">Why?</span></p>
+		<p><span class="explanation-spoiler">Need the theory?</span></p>
 	</div>
 	<div class="main">
 		<div class="circle-wrapper">
