Update index.html file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>kvipe tutorials:</h1>
-	<a href="twos-complement/index.html">2's complement</a>
+	<a href="dist/twos-complement/index.html">2's complement</a>
 </body>
 </html>
